# iPlayer-Spider

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
iPlayer/: items.py  middlewares.py  pipelines.py  settings.py
iPlayer/spiders/: Series.py  Show.py
