[tool.poetry]
name = "iplayer-spider"
version = "0.1.0"
description = "Scrapy spider for exploring a show on iPlayer"
authors = ["Charles de Freitas <me@chasbob.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.0"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
black = "^20.8b1"
pylint = "^2.6.0"
pynvim = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
